# ClipFlow

./: .gitignore  CHANGELOG.md  CONTEXT.md  LICENSE  README.md  README.zh-TW.md  about.html  index.html  package-lock.json  package.json  settings.html  vite.config.ts
.github/workflows/: release.yml
docs/adr/: 0001-cfhdrop-file-paste.md  0002-update-strategy.md  README.md
scripts/: bump-version.ps1
src/: about.ts  i18n.ts  main.ts  settings.ts  styles.css  theme.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: clipboard.rs  history.rs  lib.rs  main.rs  models.rs  persistence.rs  startup.rs  update.rs
