[package]
name = "clipflow"
version = "0.4.5"
description = "Modern lightweight clipboard history tool"
authors = ["LiuT"]
edition = "2021"

[lib]
name = "clipflow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
# Enabled for production builds (`cargo build --release --features custom-protocol`,
# or `tauri build` which passes it automatically). Without it, Tauri compiles in
# `dev` mode and every window loads `devUrl` (http://localhost:1420) instead of
# the embedded frontend assets. Keep it OFF for `npm run tauri dev`.
custom-protocol = ["tauri/custom-protocol"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "bmp", "gif", "tiff", "webp", "ico"] }
base64 = "0.22"
# Verifies portable-update downloads against the same minisign key that
# signs the NSIS updater artifacts (see update::verify_minisign).
minisign-verify = "0.2"
tokio = { version = "1", features = ["sync", "macros", "rt", "time"] }
rusqlite = { version = "0.31", features = ["bundled"] }
# Portable-update downloads run in Rust: the webview's fetch dies on CORS
# when GitHub redirects asset downloads to the CDN (no ACAO header).
ureq = { version = "2", default-features = false, features = ["tls"] }

[dev-dependencies]
# Guards the plugins.shell.open regex in tauri.conf.json: the shell plugin
# compiles it at startup and PANICS on an invalid pattern.
regex = "1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_System_DataExchange",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_UI_Shell",
    "Win32_System_Memory",
    "Win32_System_Com",
    "Win32_System_Registry",
] }
